# go-compiler

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  classes.cpp  classes.h  golang_lexer.l  golang_parser.y  golang_parser_with_tree_code.y  main.cpp  ТЯП_Практики.txt
.github/workflows/: docker-build.yml
.run/: Dockerfile.run.xml
tests/: run_test.py
tests/arrays/: array_assignment.go  array_indexing.go  multidimensional.go
tests/comments/: multi_line.go  multiline_comment.go  oneline_comments.go  single_line.go
tests/constants/: iota_basic.go  iota_reset.go
tests/global/: global-1.go
tests/io/: console_io.go
tests/keywords/: break_continue.go  const_var.go  if_else.go  range_return.go  switch_case_default.go
tests/literals/: bool_literals.go  numeric_literals.go  rune_literals.go  string_literals.go
tests/loops/: for_classic.go  for_condition.go  for_range.go
tests/operators/: arithmetic_ops.go  assignment_ops.go  compound_assignment_ops.go  inc_dec.go  logic_ops.go  multiple_assignment.go  operator_precedence.go  walrus_stmt.go
tests/semicolon/: big-test.go  manual_semicolons_test.go  semicolon.go
tests/slices/: slice_full.go  slice_subsection.go
tests/strings/: inter_str.go  raw_str.go  rune_lit.go
